--- a/devices/milesight-iot/uc511_di/device-template.yaml
+++ b/devices/milesight-iot/uc511_di/device-template.yaml
@@ -495,6 +495,8 @@ initial_entities:
     access_mod: RW
     value_type: long
     attributes:
+      min: 60
+      max: 64800
       unit: s
     identifier: report_interval
   - name: Retransmit Enable
